Can insert to postgres table