@@ -1,7 +1,10 @@
 package dev.mayhm.cebooklubapi.config;
 
+import dev.mayhm.cebooklubapi.dto.AuthorDto;
+import dev.mayhm.cebooklubapi.dto.BookDto;
 import dev.mayhm.cebooklubapi.dto.GoodreadsDto;
 import dev.mayhm.cebooklubapi.entity.Book;
+import dev.mayhm.cebooklubapi.repository.AuthorRepository;
 import dev.mayhm.cebooklubapi.repository.BookRepository;
 import dev.mayhm.cebooklubapi.service.BookDbService;
 import lombok.extern.slf4j.Slf4j;
@@ -14,6 +17,7 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
+
 import dev.mayhm.cebooklubapi.entity.Author;
 @Component
 @Slf4j
@@ -22,21 +26,21 @@ public class BooksDataLoader implements CommandLineRunner {
     private final BookDbService bookDbService;
     private final BookRepository bookRepository;
 
+    private final AuthorRepository authorRepository;
+
     @Autowired
-    public BooksDataLoader(BookDbService bookDbService, BookRepository bookRepository) {
+    public BooksDataLoader(BookDbService bookDbService, BookRepository bookRepository, AuthorRepository authorRepository) {
         this.bookDbService = bookDbService;
         this.bookRepository = bookRepository;
+        this.authorRepository = authorRepository;
     }
 
     @Override
     public void run(String... args) throws Exception {
-        log.debug("Here at run.");
         retrieveFromGoodreads();
     }
 
     private void retrieveFromGoodreads(){
-
-        int total_books = 6;
 
         List<String> isbnList = Arrays.asList("0060837020",
                 "9780099458326");
@@ -85,26 +89,33 @@ public class BooksDataLoader implements CommandLineRunner {
          * Map from dto to entity and save to database.
          */
         finalResults.thenAccept(result -> {
-            List<Book> books;
+            List<Book> bookList = new ArrayList<>();
+            List<Author> authors = new ArrayList<>();
             System.out.println("Here at result");
-             books = new ArrayList<>(result.stream()
-                    .map(goodreadsDto -> new Book(goodreadsDto.getBookDto()))
-                    .toList());
 
-            result.stream().map(goodreadsDto -> goodreadsDto
-                    .getBookDto()
-                    .getAuthors()
-                    .getAuthor().stream().map(author -> new Author(
-                        null,
-                        author.getGoodreadsId(),
-                        author.getName(),
-                        author.getRole(),
-                        author.getImage_url()
-                ))).collect(Collectors.toList());
+            result.forEach(goodreadsDto -> {
+                BookDto bookDto = goodreadsDto.getBookDto();
+                Book book = new Book(bookDto);
+                List<AuthorDto> authorDtos = bookDto.getAuthors().getAuthorDto();
+                List<Author> authorList = authorDtos.stream().map(authorDto -> new Author(null,
+                        authorDto.getGoodreadsId(),
+                        authorDto.getName(),
+                        authorDto.getRole(),
+                        authorDto.getImage_url())).toList();
 
+                List<Author> authors1 = authorRepository.saveAll(authorList);
+                authors1.forEach(book::addAuthor);
+                bookList.add(book);
+            });
 
-            log.info(books.toString());
-            books.forEach(bookRepository::save);
+//
+//             books = new ArrayList<>(result.stream()
+//                    .map(goodreadsDto -> new Book(goodreadsDto.getBookDto()))
+//                    .toList());
+
+//            authors.forEach(authorRepository::save);
+            bookList.forEach(bookRepository::save);
+
         });
     }
 }
